# UrfuExamples

./: README.md
lesson1/: CMakeLists.txt
lesson1/ex1/: CMakeLists.txt  main.cpp
lesson1/ex2/: CMakeLists.txt  main.cpp
lesson1/ex3/: CMakeLists.txt  main.cpp
lesson1/ex4/: CMakeLists.txt  main.cpp
lesson1/ex5/: CMakeLists.txt  main.cpp
lesson2/ex1/: main.cpp
lesson2/ex2/: CMakeLists.txt  main.cpp  static.cpp
lesson2/ex3/: CMakeLists.txt  main.cpp  shared.cpp
lesson2/ex4/: CMakeLists.txt  main.cpp
lesson2/ex5/: CMakeLists.txt  reader.cpp  writer.cpp
lesson2/ex6/: CMakeLists.txt  consumer.cpp  producer.cpp
lesson3/breakfast_async1/: CMakeLists.txt  main.cpp
lesson3/breakfast_async2/: main.cpp
lesson3/breakfast_sync/: main.cpp
lesson3/robot/: CMakeLists.txt  main.cpp  robot.h
lesson3/tcp/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
lesson4/corruption/: CMakeLists.txt  main.cpp
lesson4/overflow/: CMakeLists.txt  main.cpp
lesson4/phys/: CMakeLists.txt  main.cpp  shared.cpp  shared.h
lesson4/stack_mem/: CMakeLists.txt  main.cpp
